<resources>

    <string name="app_name">PrototipoSS</string>
    <string name="hello_world">Hello world!</string>
    <string name="Menu">M E N U   P R I N C I P A L</string>
    <string name="NewNote">N E W - N O T E</string>
    <string name="ViewNote">V I E W - N O T E</string>
    <string name="PageSave">P A G E S  - S A V E</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_principal">MainPrincipal</string>
    <string name="title_activity_main_p">Menu Botones</string>
    <string name="title_activity_new_note">New-Note</string>
    <string name="title_activity_view_note">View-Note</string>
    <string name="title_activity_pages_save">Pages-Save</string>
    
    <string name="boton1">New Note</string>
    <string name="boton2">View Note</string>
    <string name="boton3">Pages Save</string>
    <string name="boton4">EXIT</string>
    <string name="atras">BACK</string>
    <string name="aceptar">SAVE</string>
    

</resources>