<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/fondo1" >
    
    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/boton1"
        android:textColor="#00ff00"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/boton2" 
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/boton3"
        android:textColor="#00ff00" 
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/boton4"
        android:textColor="#ff0000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="230dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/Menu"
        android:textSize="20dip"
        android:textColor="#0000ff"
        android:textStyle="bold" />


</RelativeLayout>